# exact-real

./: .gitignore  .travis.yml  LICENSE  changelog.md  default.nix  exact-real.cabal  package.yaml  readme.md  release.nix  shell.nix  stack-7.10.2.yaml  stack-7.10.3.yaml  stack-8.2.2.yaml  stack-8.4.4.yaml  stack-8.6.5.yaml  stack.yaml
.github/workflows/: bump-command.yml  ci.yml  release.yml
bench/: Bench.hs
src/Data/: CReal.hs  ZOI.hs
src/Data/CReal/: Converge.hs  Internal.hs
test/: BoundedFunctions.hs  DocTest.hs  Doctests.hs  Floating.hs  Fractional.hs  Num.hs  Ord.hs  Random.hs  Read.hs  Real.hs  RealFloat.hs  RealFrac.hs  Test.hs
test/Data/CReal/: Extra.hs
test/Data/Monoid/: Extra.hs
test/Data/Ratio/: Extra.hs
test/Test/QuickCheck/: Extra.hs
test/Test/QuickCheck/Classes/: Extra.hs
test/Test/Tasty/: Extra.hs
