name:         exact-real
version:      0.12.2
synopsis:     Exact real arithmetic
description:
  A type to represent exact real numbers using fast binary Cauchy sequences.
license:      MIT
license-file: LICENSE
author:       Joe Hermaszewski
maintainer:   Joe Hermaszewski <keep.it.real@monoid.al>
homepage:     http://github.com/expipiplus1/exact-real
bug-reports:  http://github.com/expipiplus1/exact-real/issues
copyright:    2015 Joe Hermaszewski
category:     Math
build-type:   Simple
extra-source-files:
  .gitignore
  readme.md
  stack.yaml
cabal-version:       >=1.10
tested-with: GHC >= 7.10 && <= 8.0.1

source-repository head
  type: git
  location: https://github.com/expipiplus1/exact-real

library
  exposed-modules:
    Data.CReal
    Data.CReal.Converge
    Data.CReal.Internal
  build-depends:
    base        >= 4.8 && < 4.10,
    integer-gmp           < 1.1.0.0,
    memoize     >= 0.7 && < 0.9,
    random      >= 1.0 && < 1.2
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall

benchmark bench
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  ghc-options:
    -Wall -threaded -O2
  hs-source-dirs:
    bench
  main-is:
    Bench.hs
  build-depends:
    base        >= 4 && < 5,
    criterion   >= 1.1 && < 1.2,
    exact-real

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  ghc-options:
    -Wall -threaded
  hs-source-dirs:
    test
  main-is:
    Test.hs
  other-modules:
    BoundedFunctions,
    Data.CReal.Extra,
    Data.Monoid.Extra,
    Data.Ratio.Extra,
    Floating,
    Fractional,
    Num,
    Ord,
    Random,
    Read,
    Real,
    RealFloat,
    RealFrac,
    Test.QuickCheck.Classes.Extra
    Test.QuickCheck.Extra
    Test.Tasty.Extra
  build-depends:
    base             >= 4    && < 5,
    groups           >= 0.3  && < 0.5,
    tasty            >= 0.10 && < 0.12,
    tasty-th         >= 0.1  && < 0.2,
    tasty-quickcheck >= 0.8  && < 0.9,
    tasty-hunit      >= 0.9  && < 0.10,
    QuickCheck       >= 2.8  && < 2.9,
    random           >= 1.0  && < 1.2,
    checkers         >= 0.4  && < 0.5,
    exact-real

test-suite doctest
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  ghc-options:
    -Wall -threaded
  hs-source-dirs:
    test
  main-is:
    DocTest.hs
  build-depends:
    base      >= 4   && < 5,
    directory >= 1.0 && < 1.3,
    doctest   >= 0.8 && < 0.12,
    filepath  >= 1.3 && < 1.5

